--- a/SimpleSample/template_src/www/startup.html
+++ b/SimpleSample/template_src/www/startup.html
@@ -15,7 +15,7 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <meta name="color-scheme" content="light dark">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/startup.css">
         <title>Hello World</title>
     </head>
     <body style="margin: 0;">
