--- a/SimpleSample/template_src/www/scanPage.html
+++ b/SimpleSample/template_src/www/scanPage.html
@@ -5,11 +5,20 @@
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
+        <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover, user-scalable = 0">
         <meta name="color-scheme" content="light dark">
+        <link rel="stylesheet" href="css/topbar.css">
         <title>Hello World</title>
     </head>
     <body style="margin: 0;">
+        <header class="top-bar">
+            <ul class="top-ui">
+                <li id="icon_back">
+                    <img src="img/arrow_back.png">
+                </li>
+                <li>Barcode</li>
+            </ul>
+        </header>
         <div id="camera_view" style="width: 100vw; height: 100vh; z-index: -1;">
             <div id="show_result" style="position: fixed; width: 100vw; bottom: 10vh;  text-align:center; color: white; "/>
         </div>
