-fix: white screen bug

--- a/SimpleSample/template_src/www/scanPage.html
+++ b/SimpleSample/template_src/www/scanPage.html
@@ -21,7 +21,7 @@
                 <li>Barcode</li>
             </ul>
         </header>
-        <div id="camera_view" style="width: 100vw; height: calc(100vh-50px); z-index: -1;">
+        <div id="camera_view" style="width: 100vw; height: calc(100vh - 50px); z-index: -1;">
             <div id="show_result" style="position: fixed; width: 100vw; bottom: 10vh;  text-align:center; color: white; "/>
         </div>
         <script src="cordova.js"></script>
