--- a/SimpleSample/template_src/www/scanPage.html
+++ b/SimpleSample/template_src/www/scanPage.html
@@ -7,10 +7,11 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover, user-scalable = 0">
         <meta name="color-scheme" content="light dark">
+        <link rel="stylesheet" href="css/scanpage.css">
         <link rel="stylesheet" href="css/topbar.css">
         <title>Hello World</title>
     </head>
-    <body style="margin: 0;">
+    <body>
         <header class="top-bar">
             <ul class="top-ui">
                 <a href="startup.html">
